Aula1/doc/logfile.txt
Class documentation
<---- javadoc command: ---->
C:\Program Files (x86)\BlueJ\jdk\bin\javadoc.exe
-author
-version
-nodeprecated
-package
-noindex
-notree
-nohelp
-nonavbar
-source
1.8
-classpath
C:\Program Files (x86)\BlueJ\lib\bluejcore.jar;C:\Program Files (x86)\BlueJ\lib\junit-4.11.jar;C:\Program Files (x86)\BlueJ\lib\hamcrest-core-1.3.jar;C:\Program Files (x86)\BlueJ\lib\lang-stride.jar;C:\Program Files (x86)\BlueJ\lib\userlib\pi4j-core.jar;C:\Program Files (x86)\BlueJ\lib\userlib\pi4j-device.jar;C:\Program Files (x86)\BlueJ\lib\userlib\pi4j-gpio-extension.jar;C:\Program Files (x86)\BlueJ\lib\userlib\pi4j-service.jar;C:\Users\rafael.barreto\Documents\projetos\rafael.barreto\Aula1
-d
C:\Users\rafael.barreto\Documents\projetos\rafael.barreto\Aula1\doc
-encoding
UTF-8
-charset
UTF-8
-docletpath
C:\Program Files (x86)\BlueJ\lib\bjdoclet.jar
-doclet
bluej.doclet.doclets.formats.html.HtmlDoclet
C:\Users\rafael.barreto\Documents\projetos\rafael.barreto\Aula1\ListaSaints.java
<---- end of javadoc command ---->
Loading source file C:\Users\rafael.barreto\Documents\projetos\rafael.barreto\Aula1\ListaSaints.java...
C:\Users\rafael.barreto\Documents\projetos\rafael.barreto\Aula1\ListaSaints.java:98: error: illegal start of expression
                if (listaSaints.get(i).getNome().compareToIgnoreCase(listaSaints.get(j).getNome()) > 0) {
                ^
C:\Users\rafael.barreto\Documents\projetos\rafael.barreto\Aula1\ListaSaints.java:98: error: not a statement
                if (listaSaints.get(i).getNome().compareToIgnoreCase(listaSaints.get(j).getNome()) > 0) {
                   ^
C:\Users\rafael.barreto\Documents\projetos\rafael.barreto\Aula1\ListaSaints.java:98: error: ';' expected
                if (listaSaints.get(i).getNome().compareToIgnoreCase(listaSaints.get(j).getNome()) > 0) {
                                                                                                       ^
3 errors
